--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <a href="facebook.com"><i class='bx bxl-facebook-circle'></i></a>
             <a href="https://www.linkedin.com/in/swatigadekar09?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
     <i class='bx bxl-linkedin-square'></i></a>
-            <a href="www.github.com"><i class='bx bxl-github' ></i></a>
+        <a href="https://github.com/SWATIG01" target="_blank">
+    <i class='bx bxl-github'></i>
+</a>
             <span class="animate" style="--i:6"></span>
         </div>
         </div>
