--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <section class="about" id="about">
     <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1"></span></h2>
     <div class="about-img">
-        <img src=".Swati.jpg" alt="My Image">
+        <img src="Swati.jpg" alt="My Image">
         <span class="circle-spin"></span>
         <span class="animate scroll" style="--i:2"></span>
     </div>
